Eliminated layout issues at contacts and footer sections

--- a/css/style.css
+++ b/css/style.css
@@ -2714,7 +2714,7 @@ body {
 }
 
 .contacts-form {
-  align-items: center;
+  align-items: flex-end;
 }
 
 .contacts-form__item {
@@ -2818,10 +2818,9 @@ body {
 
 .contacts-socials__lst {
   align-items: center;
-}
-
-.social-item {
-  margin-right: 21px;
+  flex-wrap: wrap;
+  max-width: 290px;
+  column-gap: 21px;
 }
 
 .social-item__lnk > svg {
@@ -2986,8 +2985,12 @@ body {
   background-color: var(--black);
 }
 
-.footer__socials>.social-item:last-child {
-  margin-right: 0;
+.footer__socials {
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 50%;
+  column-gap: 21px;
+  row-gap: 5px;
 }
 
 .footer-social__lnk > svg > path {
